Added tab for suppliers

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -76,14 +76,21 @@
             "args": {
                 "env": "local"
             }
-        },
+        },       
         {
             "label": "Start application",
+            "dependsOn": [
+                "Start bot",
+                "Start frontend"
+            ]
+        },
+        {
+            "label": "Start bot",
             "type": "shell",
             "command": "npm run dev:teamsfx",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}"
+                "cwd": "${workspaceFolder}/bot"
             },
             "problemMatcher": {
                 "pattern": [
@@ -98,6 +105,28 @@
                     "activeOnStart": true,
                     "beginsPattern": "[nodemon] starting",
                     "endsPattern": "restify listening to|Bot/ME service listening at|[nodemon] app crashed"
+                }
+            }
+        },
+        {
+            "label": "Start frontend",
+            "type": "shell",
+            "command": "npm run dev:teamsfx",
+            "isBackground": true,
+            "options": {
+                "cwd": "${workspaceFolder}/tab"
+            },
+            "problemMatcher": {
+                "pattern": {
+                    "regexp": "^.*$",
+                    "file": 0,
+                    "location": 1,
+                    "message": 2
+                },
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": ".*",
+                    "endsPattern": "Compiled|Failed|compiled|failed"
                 }
             }
         }
