--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -24,6 +24,17 @@
     },
     "accentColor": "#FFFFFF",
     "bots": [],
+    "staticTabs": [
+        {
+            "entityId": "index",
+            "name": "Personal Tab",
+            "contentUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
+            "websiteUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
+            "scopes": [
+                "personal"
+            ]
+        }
+    ],
     "composeExtensions": [
         {
             "botId": "${{BOT_ID}}",
@@ -60,11 +71,22 @@
             ]
         }
     ],
-    "configurableTabs": [],
-    "staticTabs": [],
+    "configurableTabs": [
+        {
+            "configurationUrl": "${{TAB_ENDPOINT}}/index.html#/config",
+            "canUpdateConfiguration": true,
+            "scopes": [
+                "team",
+                "groupchat"
+            ]
+        }
+    ],
+   
     "permissions": [
         "identity",
         "messageTeamMembers"
     ],
-    "validDomains": []
+    "validDomains": [
+        "${{TAB_DOMAIN}}"
+    ]
 }
