--- a/teamsapp.local.yml
+++ b/teamsapp.local.yml
@@ -4,6 +4,14 @@
 version: 1.0.0
 
 provision:
+  - uses: script # Set TAB_DOMAIN for local launch
+    name: Set TAB_DOMAIN for local launch
+    with:
+      run: echo "::set-output TAB_DOMAIN=localhost:3000"
+  - uses: script # Set TAB_ENDPOINT for local launch
+    name: Set TAB_ENDPOINT for local launch
+    with:
+      run: echo "::set-output TAB_ENDPOINT=https://localhost:3000"
   - uses: teamsApp/create # Creates a Teams app
     with:
       name: NorthwindSuppliers-${{TEAMSFX_ENV}} # Teams app name
@@ -52,13 +60,37 @@ provision:
       appId: M365_APP_ID
 
 deploy:
+  - uses: devTool/install # Install development tool(s)
+    with:
+      devCert:
+        trust: true
+    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
+      sslCertFile: SSL_CRT_FILE
+      sslKeyFile: SSL_KEY_FILE
+
   - uses: cli/runNpmCommand # Run npm command
     with:
       args: install --no-audit
-
+      workingDirectory: ./tab
+      
+  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables for tab
+    with:
+      target: ./tab/.localConfigs
+      envs:
+        BROWSER: none
+        HTTPS: true
+        PORT: 3000
+        SSL_CRT_FILE: ${{SSL_CRT_FILE}}
+        SSL_KEY_FILE: ${{SSL_KEY_FILE}}
+  - uses: cli/runNpmCommand # Run npm command
+    with:
+      args: install --no-audit
+      workingDirectory: ./bot
+        
   - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
     with:
-      target: ./.localConfigs
+      target: ./bot/.localConfigs
       envs:
         BOT_ID: ${{BOT_ID}}
         BOT_PASSWORD: ${{SECRET_BOT_PASSWORD}}
+        
