Added config tab

--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -73,7 +73,7 @@
     ],
     "configurableTabs": [
         {
-            "configurationUrl": "${{TAB_ENDPOINT}}/index.html#/config",
+            "configurationUrl": "${{TAB_ENDPOINT}}/index.html#/tabconfig",
             "canUpdateConfiguration": true,
             "scopes": [
                 "team",
