Added a meeting tab

--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -78,7 +78,14 @@
             "scopes": [
                 "team",
                 "groupchat"
-            ]
+            ],
+            "context": [
+                "channelTab",
+                "meetingChatTab",
+                "meetingDetailsTab",
+                "meetingSidePanel",
+                "meetingStage"
+              ]
         }
     ],
    
